--- a/src/Home.css
+++ b/src/Home.css
@@ -19,4 +19,11 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   }
+  @media only screen and (max-width: 767px),
+	only screen and (max-device-width: 767px) {
+    .home__row {
+      display: flex;
+      flex-direction: column;
+    }
+  }
   
