--- a/src/Login.css
+++ b/src/Login.css
@@ -1,48 +1,68 @@
-.Login{
+.login {
     background-color: white;
-    height:100vh;
-    display:flex;
+    height: 100vh;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
-.login__logo{
-    width: 100px;
+
+.login__logo {
+    margin-top: 20px;
+    margin-bottom: 20px;
     object-fit: contain;
-    margin-top:20px ;
-    margin-bottom:20px ;
-}
-.Login__Container{
-    width:300px ;
-    display:flex ;
-    flex-direction:column ;
+    width: 100px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+.login__container {
+    width: 300px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid lightgray;
     padding: 20px;
-    border:1px solid lightgrey;
 }
-.login__signinbutton, .login__registerbutton{
-    background-color: #f0c14b;
-    border:1px solid;
-    margin-top: 10px;
-    height:30px;
-    border-radius: 2px;
-    color: #111;
-    border-color: #a88734 #9c7e31 #846a29;
+
+.login__container > h1 {
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+
+.login__container > form > h5 {
+    margin-bottom: 5px;
 }
-.Login__Container p{
-    margin-top:15px ;
+
+.login__container > form > input {
+    height: 30px;
+    margin-bottom: 10px;
+    background-color: white;
+    width: 98%;
+  }
+
+.login__container > p {
+    margin-top: 15px;
     font-size: 12px;
 }
-.Login__Container > h1{
-    font-weight: 500;
-    margin-bottom:20px ;
-}
-.Login__Container >form >h5{
-margin-bottom: 5px;
-}
-.Login__Container >form >input{
-    height:30px;
-    margin-bottom: 10px;
-    background-color:white ;
-    width:98%;
 
+.login__signInButton {
+    background: #f0c14b;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #846a29;
+  }
 
-}
+  .login__registerButton {
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: darkgray;
+  }
+  
+  
